Unref async results after calling g_simple_async_result_complete_in_idle()

All async results were leaked, since g_simple_async_result_complete_in_idle()
takes a new reference rather than assuming the ref passed in.

https://bugzilla.gnome.org/show_bug.cgi?id=738246